Fixed screenshot and changed buttons

--- a/styles.css
+++ b/styles.css
@@ -79,11 +79,8 @@ h1 {
   cursor: pointer;
 }
 
-button {
-  border: none;
-  background: none;
-}
-button:hover {
+
+a:hover {
   opacity: .5;
 }
 
